Security & Performance Enhancement
 Major Security Improvements:
- Multi-stage Docker builds for API and ML services (reduced attack surface)
- Rate limiting implementation (DoS protection)
- Input validation with Joi schemas (XSS/SQL injection prevention)
- Winston logging with structured security events
- CORS policy hardening (origin whitelist)
- Non-root container execution
- Health checks with proper timeouts

 CI/CD Pipeline Addition:
- GitHub Actions workflows for API, ML, and full project
- Automated linting (ESLint, flake8, black)
- Security scanning (Trivy, Bandit, pip-audit)
- Docker image security scans
- Dependency vulnerability checks
- Code coverage reporting
- Multi-service integration testing

 Enhanced Dependencies:
- Updated package.json with security tools (helmet, rate-limit, joi, winston)
- Comprehensive requirements.txt with security packages
- Added development tooling (eslint, prettier, husky, lint-staged)
- Version pinning for reproducible builds

 Server Security Hardening:
- Graceful shutdown handling
- Uncaught exception handling
- Request/response logging with performance metrics
- Centralized error handling with proper HTTP status codes
- Environment variable validation
- Compression middleware for performance

 Documentation Updates:
- Added CI status badges to README
- Updated all GitHub URLs to Leviathan-m/CreativePathway-Platform
- Added security scanning badges
- Enhanced contributing guidelines with CI information

 Research Compliance Maintained:
- All security enhancements preserve Park et al. (2017) research integrity
- Behavioral data validation maintains research metrics accuracy
- Performance optimizations don't compromise analytical precision

--- a/backend/ai-service/requirements.txt
+++ b/backend/ai-service/requirements.txt
@@ -1,9 +1,64 @@
+# Core web framework
 Flask==2.3.3
+Werkzeug==2.3.7
 Flask-CORS==4.0.0
+
+# Data science and ML libraries
 numpy==1.24.3
 pandas==2.0.3
 scikit-learn==1.3.0
+
+# Deep learning framework
 tensorflow==2.13.0
+tensorflow-cpu==2.13.0; sys_platform == 'darwin' or sys_platform == 'win32'
+
+# Scientific computing
+scipy==1.11.3
+matplotlib==3.7.2
+
+# HTTP client
 requests==2.31.0
+
+# Configuration management
 python-dotenv==1.0.0
+
+# Production WSGI server
 gunicorn==21.2.0
+
+# Logging and monitoring
+structlog==23.1.0
+
+# Security and validation
+cryptography==41.0.4
+PyJWT==2.8.0
+
+# Data validation
+pydantic==2.4.2
+
+# Performance optimization
+joblib==1.3.2
+
+# Model serialization
+pickle5==0.0.12; python_version < "3.8"
+cloudpickle==2.2.1
+
+# Development and testing (optional for production)
+pytest==7.4.2
+pytest-cov==4.1.0
+black==23.9.1
+flake8==6.0.0
+mypy==1.5.1
+
+# Health check and monitoring
+psutil==5.9.5
+
+# Database connectivity (if needed)
+SQLAlchemy==2.0.23
+alembic==1.12.1
+
+# Caching
+redis==4.6.0
+
+# Async support
+aiohttp==3.8.6
+asyncio-mqtt==0.13.1
