--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -5,11 +5,22 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "dev": "NODE_ENV=development nodemon server.js",
+    "build": "npm run lint && npm test",
+    "test": "jest --coverage --passWithNoTests",
+    "test:watch": "jest --watch --coverage --passWithNoTests",
+    "test:ci": "jest --coverage --passWithNoTests --watchAll=false",
+    "lint": "eslint src/ server.js --ext .js,.mjs",
+    "lint:fix": "eslint src/ server.js --ext .js,.mjs --fix",
+    "format": "prettier --write \"src/**/*.js\" \"server.js\"",
+    "format:check": "prettier --check \"src/**/*.js\" \"server.js\"",
+    "audit": "npm audit --audit-level=moderate",
+    "audit:fix": "npm audit fix",
+    "security": "npm audit --audit-level=high",
+    "clean": "rm -rf logs/*.log && rm -rf coverage/",
+    "precommit": "npm run lint && npm run test",
+    "docker:build": "docker build -t creative-pathway-api .",
+    "docker:run": "docker run -p 3000:3000 creative-pathway-api"
   },
   "keywords": [
     "education",
@@ -40,9 +51,27 @@
   "devDependencies": {
     "nodemon": "^3.0.1",
     "jest": "^29.6.4",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "eslint": "^8.50.0",
+    "prettier": "^3.0.3",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-security": "^2.1.0",
+    "eslint-plugin-node": "^11.1.0"
   },
   "engines": {
-    "node": ">=16.0.0"
-  }
+    "node": ">=18.0.0 <21.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Leviathan-m/CreativePathway-Platform.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Leviathan-m/CreativePathway-Platform/issues"
+  },
+  "homepage": "https://github.com/Leviathan-m/CreativePathway-Platform#readme"
 }
